--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body{
     /* background: #222; */
-    background-image: url('images/bg.jpg');
+    background-image: url('bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;  
     background-position: center;
